# djangoStudy

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
pypro/: settings.py
src/: settings.py
