[tool.poetry]
name = "djangostudy"
version = "0.1.0"
description = ""
authors = ["Matheus Cardoso <matheuscbsmsn1994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
django = "^4.1.7"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
